# labs_cpp

game/: CMakeLists.txt  game.cpp  graphics.cpp  input.cpp  main.cpp
game/cmake/: FindSDL2_mixer.cmake
game/content/maps/: map1.tmx
game/content/notes/: targets.txt
game/content/tilesets/: PrtCave.tsx
game/headers/: animatedsprite.h  game.h  globals.h  graphics.h  input.h  level.h  player.h  sprite.h  tinyxml2.h
game/src/: animatedsprite.cpp  game.cpp  graphics.cpp  level.cpp  main.cpp  player.cpp  sprite.cpp  tinyxml2.cpp
game_pong/: CMakeLists.txt
game_pong/src/: ball.cpp
game_snake/: CMakeLists.txt
game_snake/cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
game_snake/content/data/: nicknames.txt  scores.txt
game_snake/content/notes/: targets
game_snake/headers/: finscr.h  game.h  globals.h  input.h  menu.h  sprite.h  texture.h
game_snake/src/: finscr.cpp  game.cpp  input.cpp  main.cpp  menu.cpp  sprite.cpp  texture.cpp
lab_1_struct/: CMakeLists.txt  first_task.cpp
lab_1_struct_2/: CMakeLists.txt  second_task.cpp
lab_1_struct_2/src/: Deque.h
lab_1_sys/: CMakeLists.txt  main.cpp
lab_1_sys/hidapi/: hid.c
lab_2_struct/: CMakeLists.txt  main.cpp
lab_2_struct/src/: GraphArray.h  GraphList.h
lab_2_sys/: CMakeLists.txt  main.cpp
lab_2_sys_serv/: CMakeLists.txt  main.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/src/: Point.h  Triangle.h
lab_3_struct/: CMakeLists.txt  main.cpp
lab_3_struct/src/: data.h  sortings.cpp  sortings.h  utils.cpp  utils.h
lab_4/: CMakeLists.txt
lab_5/: CMakeLists.txt  main.cpp
lab_5/src/: Queue.h
lab_5_stl/: CMakeLists.txt  main.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_6/src/: String.h
lab_struct_2/: CMakeLists.txt  main.cpp
lab_struct_2/src/: GraphArray.h  GraphList.h
pong/: CMakeLists.txt
pong/cmake/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
pong/content/notes/: targets
pong/headers/: game.h
pong/src/: ball.cpp  main.cpp
